<resources>
    <string name="app_name">Portality</string>
    <string name="forum">Trang chủ</string>
    <string name="course_sign_up">Đăng ký học phần</string>
    <string name="schedule">Thời khóa biểu</string>
    <string name="course_fee">Học phí</string>
    <string name="exit">Đăng xuất</string>
    <string name="exampleId">19120644@student.hcmus.edu.vn</string>
    <string name="exampleName">Le Duc Tam</string>
    <string name="user">User</string>
    <string name="task">Nhiệm vụ</string>
    <string name="DT">DT</string>
    <string name="name_course">Toán tổ hợp</string>
    <string name="time">Thời gian: 7:30 AM - 11:30 AM </string>
    <string name="teacher">Giáo viên: Nguyễn Văn A</string>
    <string name="name_course1">Lập trình hướng đối tượng</string>
    <string name="content">Nội dung: Làm bài tập tuần 02</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Đăng nhập</string>
    <string name="forgotPassword">Quên mật khẩu?</string>
    <string name="cancel">Hủy</string>
    <string name="search">Tìm kiếm</string>
    <string name="confirm">Xác nhận</string>
    <string name="ReEnterPassword">Nhập mật lại khẩu mới</string>
    <string name="EnterNewPassword">Nhập mật khẩu mới</string>
    <string name="EnterEmail">Nhập email</string>
    <string name="SignUp">Đăng ký</string>
    <string name="Or">HOẶC</string>
    <string name="password">Mật khẩu</string>
    <string name="Sex">Giới tính</string>
    <string name="Duty">Chức vụ</string>
    <string name="DateOfBirth">Ngày sinh</string>
    <string name="Address">Địa chỉ</string>
    <string name="RePassword">Nhập lại mật khẩu</string>
    <string name="Surname">Họ</string>
    <string name="Firstname">Tên</string>
    <string name="PolicyAgreement">Bạn đồng ý với Điều khoản, Chính sách dữ liệu và chính sách cookie của chúng tôi.</string>
    <string name="MenuUser">Cá nhân</string>
    <string name="SexMale">Nam</string>
    <string name="DutyStudent">Sinh viên</string>
    <string name="SaveEdit">Save</string>
    <string name="day_start_title">Ngày bắt đầu</string>
    <string name="exampleTime">21/08/2021</string>
    <string name="exampleTimeTitle">Thời gian</string>
    <string name="exampleTimeOfDay">07:30 AM - 11:30 AM, T2</string>
    <string name="exampleDescriptionTitle">Mô tả khóa học</string>
    <string name="exampleDescription">Lập trình hướng đối tượng là môn học gần như phải được học bởi tất cả các lập trình viên. Qua khóa học này học viên những điều từ căn bản đến nâng cao để năm bắt được</string>
    <string name="exampleLinkTitle">Phòng học</string>
    <string name="exampleLink">Link zoom</string>
    <string name="exmapleFeeTitle">Học phí</string>
    <string name="exampleFee">180.000 vnđ</string>
    <string name="exampleRequire">Biết trước được những kỹ thuật lập trình cơ bản, hiểu được các ngôn ngữ lập trình sau: python, java, C++/C,</string>
    <string name="exampleRequireTitle">Yêu cầu</string>
    <string name="create_course_title">Tạo khóa học</string>
    <string name="info_title">Thông tin khóa học</string>
</resources>