<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuHome"
            android:icon="@drawable/ic_home"
            android:title="@string/forum" />
        <item
            android:id="@+id/menuCourseSignUp"
            android:icon="@drawable/ic_sign_up_course"
            android:title="@string/course_sign_up" />
        <item
            android:id="@+id/menuSchedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/menuTask"
            android:icon="@drawable/ic_task"
            android:title="@string/task" />
        <item
            android:id="@+id/menuFee"
            android:icon="@drawable/ic_fee"
            android:title="@string/course_fee" />
        <item
            android:id="@+id/menuExit"
            android:iconTint="@color/red"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit" />
    </group>
</menu>