<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_blue">
    <TextView
        android:id="@+id/txtNameCourse"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="Lập trình hướng đối tượng"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:paddingTop="2dp">
        <ImageView
            android:id="@+id/ImgProfilePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:padding="10dp"
            android:src="@drawable/profile_pic"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtNameTeacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:text="@string/exampleName"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFDFDFDF"
                android:textSize="15sp"
                android:text="Giáo viên"/>
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/vie_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/vie_bg">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp">
                <TextView
                    android:textColor="@color/blue"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:textSize="20dp"
                    android:text="Thông tin"/>
                <TextView
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:textSize="20dp"
                    android:text="Thảo luận"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:text="@string/day_start_title"/>

            <TextView
                android:id="@+id/txtTimeStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:textColor="@color/gray"
                android:text="@string/exampleTime"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:text="@string/exampleTimeTitle"/>

            <TextView
                android:id="@+id/sex_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:textColor="@color/gray"
                android:text="@string/exampleTimeOfDay"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:text="@string/exampleDescriptionTitle"/>

            <TextView
                android:id="@+id/duty_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:textColor="@color/gray"
                android:text="@string/exampleDescription"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:text="@string/exampleLinkTitle"/>

            <TextView
                android:id="@+id/dob_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:textColor="@color/gray"
                android:text="@string/exampleLink"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:text="@string/exmapleFeeTitle"/>

            <TextView
                android:id="@+id/address_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:textColor="@color/gray"
                android:text="@string/exampleFee"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:text="@string/exampleRequireTitle"/>
            <TextView
                android:id="@+id/txtRequire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:textColor="@color/gray"
                android:text="@string/exampleRequire"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>