<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.ForgotPassword2">

    <!-- TODO: Update blank fragment layout -->

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:padding="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:padding="10dp">


        <EditText
            android:id="@+id/txtPassword_Forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:inputType="textPassword"
            android:hint="@string/EnterNewPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repassword_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:padding="10dp">

        <EditText
            android:id="@+id/txtRePassword_Forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:inputType="textPassword"
            android:hint="@string/ReEnterPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelForgotPass2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_margin="10dp"
            android:textColor="#FF2F2F2F"
            android:backgroundTint="#FFD3D7D6"/>

        <Button
            android:id="@+id/btnConfirmForgotPass2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_blue"/>
    </LinearLayout>

</LinearLayout>