<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp">
    <ImageButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/dark_blue"
        android:background="@drawable/radius"
        android:src="@drawable/ic_book_white"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/nameCourse"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:singleLine="true"
            android:text="@string/name_course"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/timeCourse"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/time"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/nameTeacher"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/teacher"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
</LinearLayout>