<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/login_background"
        android:scaleType="centerCrop"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/vie_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

<!--        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHeight_percent=".7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>-->

        <LinearLayout
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtUserEmail_Login"
                android:layout_marginTop="91dp"
                android:hint="Username"
                android:layout_width="match_parent"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:drawableEnd="@drawable/ic_outline_email"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/txtPassword_Login"
                android:layout_marginTop="6dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:drawableEnd="@drawable/ic_outline_lock"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnLogin_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:text="@string/login"
                android:layout_marginTop="130dp"
                android:backgroundTint="#1A2C4E"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnForgotPassword_Login"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotPassword"
                app:cornerRadius="30dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Or"
                android:textColor="@color/dark_blue"
                android:layout_marginTop="10dp"
                android:gravity="center"/>

            <Button
                android:id="@+id/btnSignUp_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:text="@string/SignUp"
                android:layout_marginTop="10dp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:text="@string/app_name"/>
</androidx.constraintlayout.widget.ConstraintLayout>